@@ -23,7 +23,10 @@ pipeline{
         stage('Unit Test Maven'){
               steps{
                 script{
-                    mvnTest()
+                     withEnv(["MAVEN_OPTS=--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"]) {
+                         mvnTest()
+                    }
+
                 }
 
             }
